--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <div id="slotmachine">
-        <div class="slot" id="slot1">text 1</div>
-        <div class="slot" id="slot2">text 2</div>
-        <div class="slot" id="slot3">text 3</div>
+        <div class="slot" id="slot1"></div>
+        <div class="slot" id="slot2"></div>
+        <div class="slot" id="slot3"></div>
     </div>
 </body>
 </html>
