downloads part comleted

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.min.js" integrity="sha256-BuxrUdr/4YoztQLxT6xmdO6hSQw2d6BtBUY1pteGds4=" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+  
 </head>
 <body>
     <div id="slotmachine">
@@ -15,5 +15,7 @@
         <div class="slot" id="slot2"></div>
         <div class="slot" id="slot3"></div>
     </div>
+    <button id="reload" class="button button1">&#8634;</button>
+    <script src="script.js"></script>
 </body>
 </html>
